Ajustando documentação e criando layout base do front
